<resources>
    <string name="app_name">agent_app_android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="previous">previous</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_login">Account Login</string>
    <string name="email">Enter email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="want_to_be_an_agent">Want to be an agent?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="already_an_agent">Already an agent?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="phone_number">Phone Number</string>
    <string name="state_of_residence">State of residence</string>
    <string name="select_state_of_residence">Select state of residence</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_desc">Slide right to accept a \ntask or slide left to decline</string>
    <string name="task_title">Easily manage Tasks</string>
    <string name="task_desc_two">The app identifies your location with the Geo-tag feature while on duty.</string>
    <string name="task_title_two">Real-time tracking</string>
    <string name="task_desc_three">Smile to the bank when you work as our agent.</string>
    <string name="task_title_three">Earn money</string>
    <string name="task_title_four">Get started</string>
    <string name="task_desc_four">To get your first task, choose your location to request for task around you.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="t_c_text">
        <font color="#115766"><b>"Introduction\n\n"</b></font>

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

        <font color="#115766"><b>"Intellectual Property Rights\n\n"</b></font>

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

        <font color="#115766"><b>"Restrictions\n\n"</b></font>

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
    </string>
    <string name="settings">Settings</string>
    <string name="task">Task</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="accept">Accept</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="open_email_app">Open email app</string>
    <string name="reset_pass_instruction">We have sent a password recovery \ninstruction to your email addresss</string>
    <string name="check_your_email">Check your email</string>
    <string name="alt_text">If you don\'t find the email in your inbox \nplease, check your spam folder \nor</string>
    <string name="try_another_email_address"><u>Try another email address</u></string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="must_be_8_chars_long">Must be at least 8 characters long</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="both_passwords_must_match">Both passwords must match</string>
    <string name="save_changes">Save changes</string>
    <string name="enter_new_password_again">Enter new password again</string>
</resources>