<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/dashboardFragment">


    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.youverify.agent_app_android.view.fragment.home.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"/>

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.youverify.agent_app_android.view.fragment.home.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.youverify.agent_app_android.view.fragment.home.SettingsFragment"
        android:label="@string/settings"/>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.youverify.agent_app_android.view.fragment.home.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />





</navigation>