<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.sign_in_up.ui.reset_password.CreateNewPasswordFragment">


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:navigationIcon="@drawable/ic_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:fontFamily="@font/br_sonoma_regular"
        android:text="@string/create_new_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <TextView
            android:id="@+id/label_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/new_password"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/colorTextPrimary"
            app:hintTextColor="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/label_new_password"
            app:layout_constraintTop_toBottomOf="@+id/label_new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/signUpBorderColor"
                android:fontFamily="@font/br_sonoma_regular"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_new_password"
                android:textColorHint="@color/colorTextPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/check_pass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/must_be_8_chars_long"
            android:textStyle="normal"
            android:textColor="@color/createNewPassTextColor"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password_layout"/>


        <TextView
            android:id="@+id/label_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/confirm_new_password"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/check_pass_label" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/label_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/signUpBorderColor"
                android:fontFamily="@font/br_sonoma_regular"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_new_password_again"
                android:textColorHint="@color/colorTextPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/check__confirm_pass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/both_passwords_must_match"
            android:textStyle="normal"
            android:textColor="@color/createNewPassTextColor"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_changes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check__confirm_pass_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>