<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.sign_in_up.ui.reset_password.CheckEmailFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:navigationIcon="@drawable/ic_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/title_forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/title_forgot_password"
            android:src="@drawable/ic_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/check_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/check_your_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/lock_icon"
            app:layout_constraintStart_toStartOf="@id/lock_icon"
            app:layout_constraintTop_toBottomOf="@id/lock_icon" />


        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/reset_pass_instruction"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@id/check_email"
            app:layout_constraintStart_toStartOf="@id/check_email"
            app:layout_constraintTop_toBottomOf="@id/check_email" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_open_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/open_email_app"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction_text" />

        <TextView
            android:id="@+id/alt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/alt_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/alt_email_text"
            app:layout_constraintEnd_toEndOf="@id/button_open_email"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/button_open_email"
            app:layout_constraintTop_toBottomOf="@+id/button_open_email"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/alt_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/br_sonoma_regular"
            android:text="@string/try_another_email_address"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/alt_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/alt_text"
            app:layout_constraintTop_toBottomOf="@+id/alt_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>