<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.onboarding.OnBoardingFragment">

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/br_sonoma_regular"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/onBoardBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_img_btn"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_prev_button"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager2.widget.ViewPager2>

    <ProgressBar
        android:id="@+id/onBoardProgressBar"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:progress="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/viewPager"
        app:layout_constraintStart_toStartOf="@id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"/>

    <Button
        android:id="@+id/onBoardNextButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:height="80dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/br_sonoma_regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/onBoardProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/onBoardProgressBar"
        app:layout_constraintStart_toStartOf="@+id/onBoardProgressBar"
        app:layout_constraintTop_toTopOf="@+id/onBoardProgressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>